--- a/src/components/ProductDetail/productDetail.css
+++ b/src/components/ProductDetail/productDetail.css
@@ -12,7 +12,8 @@
 .title h2::before {
     position: absolute;
     content: '';
-    background: url(../../../assets/images/icon-bg-title.png) no-repeat center bottom;
+    background: url(../../../assets/images/icon-bg-title.png) no-repeat center
+    bottom;
     width: 108px;
     height: 16px;
     bottom: -20px;
